<resources>
    <string name="app_name">ToLan</string>
    <string name="urlBase">https://db-bartolucci.herokuapp.com/</string>
    <string name="recompensa">0</string>
    <!-- Fragment Welcome -->
    <string name="bienvenida">Bienvenido a ToLan</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="mensaje_bienvenida_1">Cuando se abre la puerta de la comunicación todo es posible</string>
    <string name="mensaje_bienvenida_2">El mejor experto también fue un día aprendiz</string>
    <string name="mensaje_bienvenida_3">Existe un lenguaje más allá de las palabras</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Ingresar</string>
    <!-- Fragment Login -->
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="login">Inicio de sesión</string>
    <string name="forget">¿Olvidó su clave?</string>
    <!-- Fragment Register User -->
    <string name="reg">Registro de usuario</string>
    <string name="dtperson">Datos personales</string>
    <string name="dtusuario">Datos de usuario</string>
    <string name="estadocuenta">Estado de la cuenta</string>
    <string name="tipo">Tipo de usuario: </string>
    <string name="docente">Docente</string>
    <string name="estudiante">Estudiante</string>
    <!-- Fragment Recovery Password -->
    <string name="recovery">Recuperar clave</string>
    <string name="msrectel">Ingrese su número de celular para continuar</string>
    <string name="msrecemail">Ingrese su correo para continuar</string>
    <string name="otro">Probar de otra manera</string>
    <string name="rec">Recuperar</string>
    <!-- Fragment Menu Admin -->
    <string name="menu">Menú Administrador</string>
    <string name="niveles">Niveles</string>
    <string name="subniveles">Subniveles</string>
    <string name="actividades">Actividades</string>
    <string name="skins">Artículos</string>
    <string name="grupos">Grupos</string>
    <string name="historial">Historial</string>
    <!-- Fragment Menu Docente -->
    <string name="menud">Menú Docente</string>
    <string name="usuarios">Usuarios</string>
    <!-- Menú Toolbar -->
    <string name="myinfo">Mi información</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="contactos">Acerca de</string>
    <!-- Activity Levels -->
    <string name="searchNivel">Buscar nivel</string>
    <!-- Item Activity Levels -->
    <string name="idT">Id:</string>
    <string name="id">Id</string>
    <string name="nivel">Nivel:</string>
    <string name="niv">Nivel</string>
    <string name="descripcion">Descripción:</string>
    <string name="desc">Descripción</string>
    <string name="prioriT">Prioridad:</string>
    <string name="priori">Prioridad</string>
    <!-- Activity Add Level -->
    <string name="addnivel">Ingrese datos del nivel</string>
    <string name="aceptar">Aceptar</string>
    <!-- Activity Sublevels -->
    <string name="searchSubnivel">Buscar subnivel</string>
    <!-- Item Activity Levels -->
    <string name="subnivel">Subnivel:</string>
    <string name="subniv">Subnivel</string>
    <string name="numact">Núm. Actividades:</string>
    <string name="numac">Núm. Actividades</string>
    <!-- Activity Activity Skins -->
    <string name="titleSkins">Artículos</string>
    <string name="skin">Artículo:</string>
    <string name="valor">Valor:</string>
    <string name="lblobjeto">Nombre artículo</string>
    <!-- Item Activity Skins -->
    <string name="searchSkin">Buscar artículo</string>
    <string name="val">Valor</string>
    <!-- Activity Add Skin -->
    <string name="addskin">Ingrese datos del artículo</string>
    <!-- Activity Choose Video -->
    <string name="choosevid">Seleccione uno o varios videos</string>
    <string name="limitevid">Límite de 10 videos</string>
    <!-- Activity Activity Contacts -->
    <string name="masinfo">Para más información:</string>
    <string name="info">ToLan es una aplicación desarrollada como parte del proyecto de vinculación
        "Tecnologías de la Información y Comunicación enfocadas a la discapacidad en la zona de influencia de la UTEQ" (F&amp;C),
        de la Carrera de Ingeniería en Sistemas, perteneciente a la Facultad de Ciencias de la Ingeniería,
        de la Universidad Técnica Estatal de Quevedo, en cooperación con el Gobierno Autónomo Descentralizado de la Municipalidad de El Empalme.
        Esta aplicación está enfocada en el aprendizaje de contenidos referentes al área de lenguaje y comunicación,
        con el fin de brindar una herramienta inclusiva de uso universal.</string>
    <string name="equipo">Desarrollada por:</string>
    <string name="dirigido">Dirigido por:</string>
    <string name="administracion">En la administración de:</string>
    <string name="colaboracion">Con la colaboración de:</string>
    <string name="link">http://fyc.uteq.edu.ec:8080/</string>
    <string name="linkfb">https://www.facebook.com/fycuteq</string>
    <string name="Multimedia">Información multimedia obtenida de:</string>
    <string name="linkFlat">https://www.flaticon.com/</string>
    <string name="linkLibro">http://www.plataformaconadis.gob.ec/~platafor/diccionario/</string>
    <string name="LibroLeng">Guía de actividades basadas en el libro de Lengua y Literatura de 2° EGB
        del Ministerio de Educación del Ecuador - 2016</string>
    <string name="footerC">2022 - Todos los derechos reservados \n ToLan - (F&amp;C) UTEQ</string>
    <string name="cname">Contact Name</string>
    <string name="cemail">Email</string>
    <!-- Fragment Identificar Respuesta imagen -->
    <string name="titulo">Identificar la imagen correcta</string>
    <string name="comprobar">Comprobar</string>
    <string name="correcto">¡Correcto!</string>
    <string name="incorrecto">¡Incorrecto!</string>
    <!-- Fragment Identificar Respuesta txt -->
    <string name="tituloITxt">Identificar la opción correcta</string>
    <!-- Fragment Reconocer Figuras -->
    <string name="tituloReco">Reconocer figura</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="activity_description">Desgloce de actividades pertenecientes al subnivel X</string>
    <string name="activity_title">Actividades</string>
    <string name="search">Busqueda de Actividades</string>
    <string name="item_activity_title">Item de actividad</string>
    <string-array name="dificultad_list">
        <item>Muy Baja</item>
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
        <item>Muy Alta</item>
        <item>Extrema</item>
    </string-array>

    <string-array name="tipos_list">
        <item>Actividad Común</item>
        <item>Evaluación</item>
    </string-array>

    <string-array name="actividades_list">
        <item>Reconocer figuras</item>
        <item>Ordenar secuencias</item>
        <item>Identificar entre palabras</item>
        <item>Identificar entre imágenes</item>
        <item>Armar rompecabezas</item>
        <item>Seleccionar pares imagen con texto</item>
        <item>Seleccionar pares imagen con imagen</item>
        <item>Arrastrar y soltar texto</item>
        <item>Arrastrar y soltar imagen</item>
    </string-array>

    <string-array name="tiposMultimedia_list">
        <item>IMG</item>
        <item>GIF</item>
    </string-array>

</resources>