<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnCaritas"
        android:icon="@drawable/carita"
        android:title="@string/recompensa"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnRecompensa"
        android:title="@string/recompensa"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/btnMyInfo"
        android:icon="@drawable/icon_user"
        android:iconTint="@color/secundario"
        android:title="@string/myinfo"
        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/btnLogIn"
        android:icon="@drawable/icon_logout"
        android:iconTint="@color/secundario"
        android:title="@string/cerrar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnContacts"
        android:icon="@drawable/icon_contacts"
        android:iconTint="@color/secundario"
        android:title="@string/contactos"
        app:showAsAction="ifRoom" />
</menu>