<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNiveles"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgNivel"
                android:layout_width="135dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_picture" />

            <TextView
                android:id="@+id/lblTitleNiv"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/imgNivel"
                android:text="@string/nivel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTitleNivel"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/lblTitleNiv"
                android:text="@string/niv" />

            <TextView
                android:id="@+id/lblDescription"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitleNivel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/imgNivel"
                android:text="@string/descripcion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitleNivel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/lblDescription"
                android:text="@string/desc" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>