<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FrgContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"></include>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/borde"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/logouteq"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                app:srcCompat="@drawable/logouteq"
                                android:layout_weight="1" />

                            <ImageView
                                android:id="@+id/logofyc"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                app:srcCompat="@drawable/logofyc"
                                android:layout_weight="1" />

                            <ImageView
                                android:id="@+id/logofci"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                app:srcCompat="@drawable/logofci"
                                android:layout_weight="1" />

                        </LinearLayout>

                        <com.codesgood.views.JustifiedTextView
                            android:id="@+id/txtInf"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/info"
                            android:textAlignment="textStart"
                            android:textColor="@color/secundario"
                            android:textStyle="italic" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textviewDT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:shadowColor="@color/secundario"
                    android:shadowRadius="0.5"
                    android:text="@string/equipo"
                    android:textColor="@color/principal"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvContacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/textviewD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:shadowColor="@color/secundario"
                    android:shadowRadius="0.5"
                    android:text="@string/dirigido"
                    android:textColor="@color/principal"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/textviewA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:shadowColor="@color/secundario"
                    android:shadowRadius="0.5"
                    android:text="@string/administracion"
                    android:textColor="@color/principal"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/textviewC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:shadowColor="@color/secundario"
                    android:shadowRadius="0.5"
                    android:text="@string/colaboracion"
                    android:textColor="@color/principal"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMoreInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="80dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/borde">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/icoinfo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="4dp"
                                app:srcCompat="@drawable/icon_info"
                                app:tint="@color/principal"
                                android:layout_weight="5"/>

                            <TextView
                                android:id="@+id/txtIn"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="0dp"
                                android:shadowColor="@color/secundario"
                                android:shadowRadius="0.5"
                                android:text="@string/masinfo"
                                android:textAlignment="textStart"
                                android:textColor="@color/principal"
                                android:textStyle="bold|italic"
                                android:layout_weight="1"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/link"
                            android:textColor="@color/secundario"
                            android:autoLink="phone|web"
                            android:padding="10dp"/>

                        <TextView
                            android:id="@+id/linkfb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/linkfb"
                            android:textColor="@color/secundario"
                            android:autoLink="phone|web"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/Multimedia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Multimedia"
                            android:textColor="@color/secundario"
                            android:autoLink="phone|web"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/linkFlat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/linkFlat"
                            android:textColor="@color/secundario"
                            android:autoLink="phone|web"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/linkLibro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/linkLibro"
                            android:textColor="@color/secundario"
                            android:autoLink="phone|web"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/LibroLeng"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/LibroLeng"
                            android:textColor="@color/secundario"
                            android:autoLink="phone|web"
                            android:padding="10dp" />

                    </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/footerContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/principal"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/cr"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_toLeftOf="@+id/txtFooterC"
                android:tint="@color/white"
                app:srcCompat="@drawable/icon_copyright"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/txtFooterC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/footerC"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>